--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 h3 {
-  font-weight: 100;
+  font-weight: 300;
   color: #667;
   text-transform: uppercase;
   font-size: 0.85em;
@@ -110,7 +110,7 @@ main {
   color: #9c9c9c;
   margin: 0;
   font-size: 1.25em;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .main-header-search {
@@ -207,6 +207,7 @@ main {
   width: auto;
   background-color: #767bbd;
   border-radius: 50%;
+  margin-right: 20px;
 }
 
 .social-image path {
@@ -215,7 +216,6 @@ main {
 
 .social-text p:nth-child(1) {
   color: #767bbd;
-  font-weight: 100;
   font-size: 1.25em;
   margin: 0;
 }
@@ -223,26 +223,171 @@ main {
 .social-text p:nth-child(2) {
   color: #667;
   font-size: 3em;
-  font-weight: 300;
+  font-weight: 100;
   margin: 0;
 }
 
 /*---new members---*/
 .new-members {
+  padding: 20px 20px 10px 20px;
   border-top: solid 1px rgb(150, 150, 150);
   border-bottom: solid 1px rgb(150, 150, 150);
-  padding-top: 10px;
   margin-top: 10px;
+}
+
+.new-members h3 {
+  margin: 0;
+  padding-bottom: 10px;
 }
 
 .members-container {
   border-top: solid 1px rgb(150, 150, 150);
   display: flex;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
 
-.date {
-  text-align: right;
+.members-container img {
+  margin-right: 10px;
 }
+
+.members-date {
+  font-size: 0.8em;
+  color: #667;
+  margin: 0;
+  justify-content: flex-end;
+  margin-left: auto;
+}
+
+.members-container a {
+  color: #43478b;
+  text-decoration: none;
+  font-size: 0.8em;
+}
+
+.members-text p {
+  font-weight: 300;
+  font-size: 0.9em;
+  margin: 0;
+}
+
+/*---members activity---*/
+.recent-activity {
+  padding: 10px 20px 10px 20px;
+  border-bottom: solid 1px rgb(150, 150, 150);
+  margin-top: 10px;
+}
+
+.recent-activity h3 {
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+.activity-container {
+  border-top: solid 1px rgb(150, 150, 150);
+  display: flex;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+.activity-container img {
+  margin-right: 10px;
+}
+
+.arrow {
+  font-size: 2em;
+  font-weight: 300;
+  color: #667;
+  margin: 0;
+  justify-content: flex-end;
+  margin-left: auto;
+}
+
+.activity-text p {
+  font-weight: 300;
+  font-size: 0.8em;
+  margin: 0;
+}
+
+/*---message widget---*/
+.message {
+  margin: 20px;
+}
+
+.message-user {
+  padding-top: 0;
+  padding-bottom: 5px;
+  margin-top: 0;
+}
+
+#messageField,
+#userField {
+  background-color: rgb(250, 250, 250);
+  height: 40px;
+  width: 100%;
+  border: solid 1px rgb(150, 150, 150);
+  border-radius: 5px;
+  padding-left: 10px;
+  font-size: 1em;
+}
+
+#messageField {
+  height: 120px;
+  margin-top: 15px;
+  padding-top: 10px;
+}
+
+::placeholder {
+  color: rgb(160, 160, 160);
+  opacity: 1;
+  font-weight: 300;
+}
+
+.button-primary {
+  background-color: #767bbd;
+  width: 100%;
+  height: 50px;
+  font-size: 0.9em;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+/*---local settings widget---*/
+.settings {
+  border-top: solid 1px rgb(150, 150, 150);
+  padding: 10px 20px 20px 20px;
+}
+
+#time-zone {
+  background-color: rgb(250, 250, 250);
+  height: 40px;
+  width: 100%;
+  border: solid 1px rgb(150, 150, 150);
+  border-radius: 5px;
+  padding-left: 10px;
+  font-size: 1em;
+}
+
+select {
+  color: rgb(160, 160, 160);
+  opacity: 1;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+.button-disabled {
+  background-color: rgb(160, 160, 160);
+  width: 100%;
+  height: 50px;
+  font-size: 0.9em;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
 /* media query 768px */
 @media (min-width: 768px) {
   .grid-container {
