--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,6 @@ body {
   margin: 0;
 }
 
-.profile-image {
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-}
-
 h3 {
   font-weight: 300;
   color: #667;
@@ -69,12 +63,27 @@ header span {
 }
 
 .bell-container {
-  border-right: solid 1px black;
   padding: 5px;
   margin: 10px;
   height: 30px;
   width: 30px;
   position: relative;
+}
+
+.bell-container:hover {
+  transform: rotate(20deg);
+  cursor: pointer;
+}
+
+.profile-image {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
+
+.profilediv {
+  border-left: solid 1px black;
+  padding-left: 10px;
 }
 
 /*---nav---*/
@@ -120,6 +129,7 @@ main {
   padding: 17px 20px;
   border-bottom: solid 1px #bbb;
   border-left: solid 1px #bbb;
+  position: relative;
 }
 
 .main-header-search input {
@@ -188,13 +198,13 @@ main {
 
 /* social */
 .social-header {
-  padding-left: 10px;
+  padding-left: 15px;
   padding-top: 10px;
   margin: 0;
 }
 
-.social-container {
-  margin: 10px;
+.social-stats {
+  margin: 10px 15px 10px 15px;
   padding: 10px;
   display: flex;
   background-color: rgb(233, 233, 233);
@@ -360,6 +370,15 @@ main {
   padding: 10px 20px 20px 20px;
 }
 
+.settings h3 {
+  margin-bottom: 30px;
+}
+
+.settings p {
+  font-weight: 300;
+  font-size: 1em;
+}
+
 #time-zone {
   background-color: rgb(250, 250, 250);
   height: 40px;
@@ -388,6 +407,75 @@ select {
   margin-top: 10px;
 }
 
+/*---custom toggle-switch---*/
+.onoffswitch {
+  position: relative;
+  width: 90px;
+  margin-bottom: 30px;
+}
+.onoffswitch-checkbox {
+  display: none;
+}
+.onoffswitch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 2px solid #999999;
+  border-radius: 20px;
+}
+.onoffswitch-inner {
+  display: block;
+  width: 200%;
+  margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before,
+.onoffswitch-inner:after {
+  display: block;
+  float: left;
+  width: 50%;
+  height: 30px;
+  padding: 0;
+  line-height: 30px;
+  font-size: 14px;
+  color: white;
+  font-family: Trebuchet, Arial, sans-serif;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+  content: "ON";
+  padding-left: 10px;
+  background-color: #767bbd;
+  color: #ffffff;
+}
+.onoffswitch-inner:after {
+  content: "OFF";
+  padding-right: 10px;
+  background-color: #eeeeee;
+  color: #999999;
+  text-align: right;
+}
+.onoffswitch-switch {
+  display: block;
+  width: 18px;
+  margin: 6px;
+  background: #ffffff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 56px;
+  border: 2px solid #999999;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+  margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+  right: 0px;
+}
+
 /* media query 768px */
 @media (min-width: 768px) {
   .grid-container {
@@ -397,12 +485,19 @@ select {
       "navigation main";
   }
 
-  main {
-    grid-template-columns: 50%;
+  nav {
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
+  main {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .main-header,
+  .alert,
   .traffic,
-  .social {
+  .social-container {
     grid-column: 1 / span 2;
   }
 
