--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ header span {
 /*---nav---*/
 nav {
   grid-area: navigation;
-  background-color: #43478b;
+  background-color: #474a81;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -167,12 +167,20 @@ main {
 
 .traffic-header {
   display: flex;
+  justify-content: space-between;
   padding: 0;
+  margin: 0 0 10px 0;
+}
+
+.traffic-header h3 {
+  margin: 10px 0;
 }
 
 .traffic-nav {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
+  margin: 0;
   list-style: none;
 }
 
@@ -193,7 +201,7 @@ main {
 .daily,
 .mobile {
   border-bottom: solid 1px rgb(150, 150, 150);
-  padding: 15px 5px 15px 15px;
+  padding: 15px;
 }
 
 /* social */
@@ -217,7 +225,7 @@ main {
   width: auto;
   background-color: #767bbd;
   border-radius: 50%;
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 .social-image path {
@@ -321,7 +329,8 @@ main {
 
 /*---message widget---*/
 .message {
-  margin: 20px;
+  border-bottom: solid 1px rgb(150, 150, 150);
+  padding: 20px;
 }
 
 .message-user {
@@ -366,17 +375,18 @@ main {
 
 /*---local settings widget---*/
 .settings {
-  border-top: solid 1px rgb(150, 150, 150);
   padding: 10px 20px 20px 20px;
-}
-
-.settings h3 {
-  margin-bottom: 30px;
 }
 
 .settings p {
   font-weight: 300;
   font-size: 1em;
+  margin: 5px 0;
+}
+
+.settings h3 {
+  padding: 10px 0px;
+  margin: 0;
 }
 
 #time-zone {
@@ -393,7 +403,7 @@ select {
   color: rgb(160, 160, 160);
   opacity: 1;
   font-weight: 300;
-  margin-bottom: 10px;
+  margin: 20px 0px 10px 0px;
 }
 
 .button-disabled {
@@ -411,7 +421,7 @@ select {
 .onoffswitch {
   position: relative;
   width: 90px;
-  margin-bottom: 30px;
+  margin: 20px 0;
 }
 .onoffswitch-checkbox {
   display: none;
@@ -519,5 +529,64 @@ select {
 
   .widget-container-half {
     width: 45vw;
+  }
+
+  .daily {
+    border-right: solid 1px rgb(150, 150, 150);
+  }
+
+  .recent-activity {
+    border-top: solid 1px rgb(150, 150, 150);
+    border-left: solid 1px rgb(150, 150, 150);
+  }
+
+  .settings {
+    border-left: solid 1px rgb(150, 150, 150);
+  }
+
+  .social-inner {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .social-stats {
+    width: 30%;
+  }
+
+  .social-text p:nth-child(2) {
+    font-size: 2.3em;
+  }
+
+  .settings {
+    border-bottom: solid 1px rgb(150, 150, 150);
+  }
+
+  .settings p {
+    flex-basis: 50%;
+  }
+
+  .toggle-div {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0;
+  }
+
+  .onoffswitch {
+    margin: 12.5px 0;
+  }
+
+  .settings-button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .button-primary {
+    flex-basis: 48%;
+  }
+
+  .button-disabled {
+    flex-basis: 48%;
   }
 }
